Library/AXL(Library)/C, C++/AXDev.h

// Verify whether to firmware version designated RTEX board.
//DWORD    __stdcall AxlGetFirmwareVersion(long lBoardNo, PTCHAR szVersion);
// Sent to firmware designated board.
DWORD    __stdcall AxlSetFirmwareCopy(long lBoardNo, WORD *wData, WORD *wCmdData);
// Execute Firmware update to designated board.
DWORD    __stdcall AxlSetFirmwareUpdate(long lBoardNo);
// Verify whether currently RTEX status Initialized.
DWORD    __stdcall AxlCheckStatus(long lBoardNo, DWORD* dwStatus);
// Execute universal command designated axis of board.
DWORD    __stdcall AxlRtexUniversalCmd(long lBoardNo, WORD wCmd, WORD wOffset, WORD *wData);
// Execute RTEX communication command designated axis.
DWORD    __stdcall AxmRtexSlaveCmd(long lAxisNo, DWORD dwCmdCode, DWORD dwTypeCode, DWORD dwIndexCode, DWORD dwCmdConfigure, DWORD dwValue);
// Verify whether Result of RTEX communication command designated axis.
DWORD    __stdcall AxmRtexGetSlaveCmdResult(long lAxisNo, DWORD* dwIndex, DWORD *dwValue);
// Check the result of the RTEX communication command executed on the specified axis. PCIE-Rxx04-RTEX only
DWORD    __stdcall AxmRtexGetSlaveCmdResultEx(long lAxisNo, DWORD* dwpCommand, DWORD* dwpType, DWORD* dwpIndex, DWORD *dwpValue);
// Verify whether RTEX status information designated axis.
DWORD    __stdcall AxmRtexGetAxisStatus(long lAxisNo, DWORD *dwStatus);
// Verify whether RTEX communication return information designated axis.(Actual position, Velocity, Torque)
DWORD    __stdcall AxmRtexGetAxisReturnData(long lAxisNo,  DWORD *dwReturn1, DWORD *dwReturn2, DWORD *dwReturn3);
// Verify whether currently status information of RTEX slave axis.(mechanical, Inposition and etc)
DWORD    __stdcall AxmRtexGetAxisSlaveStatus(long lAxisNo,  DWORD *dwStatus);
// Enter the universal network command of specified MLII slave axis.
DWORD    __stdcall AxmSetAxisCmd(long lAxisNo, DWORD* tagCommand);
// Verifying result of universal network command of specified MLII slave axis.
DWORD    __stdcall AxmGetAxisCmdResult(long lAxisNo, DWORD* tagCommand);
// The specified SID Write the result of the network command to the slave module and return it.
DWORD   __stdcall AxdSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
DWORD   __stdcall AxaSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
DWORD   __stdcall AxcSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
// Verify DPRAM data.
DWORD    __stdcall AxlGetDpRamData(long lBoardNo, WORD wAddress, DWORD* dwpRdData);
// Verify DPRAM data in Word unit.
DWORD    __stdcall AxlBoardReadDpramWord(long lBoardNo, WORD wOffset, DWORD* dwpRdData);
// Set DPRAM data in Word unit.
DWORD   __stdcall AxlBoardWriteDpramWord(long lBoardNo, WORD wOffset, DWORD dwWrData);
// Transmit instructions of each slave of each board.
DWORD   __stdcall AxlSetSendBoardEachCommand(long lBoardNo, DWORD dwCommand, DWORD* dwpSendData, DWORD dwLength);
// Transmit instructions to each board.
DWORD    __stdcall AxlSetSendBoardCommand(long lBoardNo, DWORD dwCommand, DWORD* dwpSendData, DWORD dwLength);
// Verify the response of each board.
DWORD    __stdcall AxlGetResponseBoardCommand(long lBoardNo, DWORD* dwpReadData);
// Reading firmware version function of slaves in network type master board.
// Declare with array of ucaFirmwareVersion unsigned char type(Size : 4 or more)
DWORD    __stdcall AxmInfoGetFirmwareVersion(long lAxisNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxaInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxdInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxcInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
//======== Only for PCI-R1604-MLII ===========================================================================
// Set the value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
// Default value : Max
// Setting value Range : 0 ~ 4000H
// If it is set to 4000H or higher, the setting is set higher than that, but the operation is applied to the value of 4000H.
DWORD    __stdcall AxmSetTorqFeedForward(long lAxisNo, DWORD dwTorqFeedForward);
// It is API that read value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
// Default value : Max
DWORD    __stdcall AxmGetTorqFeedForward(long lAxisNo, DWORD* dwpTorqFeedForward);
// It is API that set the value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
// Default value : 0
// Setting value Range : 0 ~ FFFFH
DWORD    __stdcall AxmSetVelocityFeedForward(long lAxisNo, DWORD dwVelocityFeedForward);
// It is API that read value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
DWORD    __stdcall AxmGetVelocityFeedForward(long lAxisNo, DWORD* dwpVelocityFeedForward);
// Set Encoder type.
// Default value : 0(TYPE_INCREMENTAL)
// Setting range : 0 ~ 1
// dwEncoderType : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
DWORD   __stdcall AxmSignalSetEncoderType(long lAxisNo, DWORD dwEncoderType);
// Verify Encoder type.
DWORD   __stdcall AxmSignalGetEncoderType(long lAxisNo, DWORD* dwpEncoderType);
// For updating the slave firmware(only for RTEX-PM).
//DWORD   __stdcall AxmSetSendAxisCommand(long lAxisNo, WORD wCommand, WORD* wpSendData, WORD wLength);

//======== Only for PCI-R1604-RTEX, RTEX-PM==============================================================
// When Input Universal Input 2, 3, Set Jog move velocity
// Set only once execute after all drive setting (Ex, PulseOutMethod, MoveUnitPerPulse etc..)
DWORD    __stdcall AxmMotSetUserMotion(long lAxisNo, double dVelocity, double dAccel, double dDecel);
// When Input Universal Input 2, 3, Set Jog move usage
// Setting value :  0(DISABLE), 1(ENABLE)
DWORD    __stdcall AxmMotSetUserMotionUsage(long lAxisNo, DWORD dwUsage);
// Set Load/UnLoad Position to Automatically move use MPGP Input
DWORD    __stdcall  AxmMotSetUserPosMotion(long lAxisNo, double dVelocity, double dAccel, double dDecel, double dLoadPos, double dUnLoadPos, DWORD dwFilter, DWORD dwDelay);
// Set Usage Load/UnLoad Position to Automatically move use MPGP Input
// Setting value :  0(DISABLE), 1(Position function A), 2(Position function B)
DWORD    __stdcall  AxmMotSetUserPosMotionUsage(long lAxisNo, DWORD dwUsage);
//========================================================================================================

//======== SIO-CN2CH, Only for absolute position trigger module(B0) =======================================
// The API of writing memory data.
DWORD  __stdcall AxcKeWriteRamDataAddr(long lChannelNo, DWORD dwAddr, DWORD dwData);
// The API of reading memory data.
DWORD  __stdcall AxcKeReadRamDataAddr(long lChannelNo, DWORD dwAddr, DWORD* dwpData);
// Memory initialization API.
DWORD  __stdcall AxcKeResetRamDataAll(long lModuleNo, DWORD dwData);
// Trigger timeout setting API.
DWORD  __stdcall AxcTriggerSetTimeout(long lChannelNo, DWORD dwTimeout);
// Trigger timeout checking API.
DWORD  __stdcall AxcTriggerGetTimeout(long lChannelNo, DWORD* dwpTimeout);
// Trigger Waiting State checking API.
DWORD  __stdcall AxcStatusGetWaitState(long lChannelNo, DWORD* dwpState);
// Trigger Waiting State setting API.
DWORD  __stdcall AxcStatusSetWaitState(long lChannelNo, DWORD dwState);
// Write command to designated channel.
DWORD  __stdcall AxcKeSetCommandData32(long lChannelNo, DWORD dwCommand, DWORD dwData);
// Write command to designated channel.
DWORD  __stdcall AxcKeSetCommandData16(long lChannelNo, DWORD dwCommand, WORD wData);
// Verify register of specified channel.
DWORD  __stdcall AxcKeGetCommandData32(long lChannelNo, DWORD dwCommand, DWORD *dwpData);
// Verify register of specified channel.
DWORD  __stdcall AxcKeGetCommandData16(long lChannelNo, DWORD dwCommand, WORD *wpData);
//========================================================================================================

//======== Only for PCI-N804/N404, Sequence Motion ===========================================================
// Set Axis Information of sequence Motion (min 1axis)
// lSeqMapNo : Sequence Motion Index Point
// lSeqMapSize : Number of axis
// long* LSeqAxesNo : Number of arrary
DWORD   __stdcall AxmSeqSetAxisMap(long lSeqMapNo, long lSeqMapSize, long* lSeqAxesNo);
DWORD   __stdcall AxmSeqGetAxisMap(long lSeqMapNo, long* lSeqMapSize, long* lSeqAxesNo);
// Set Standard(Master)Axis of Sequence Motion.
// By all means Set in AxmSeqSetAxisMap setting axis.
DWORD   __stdcall AxmSeqSetMasterAxisNo(long lSeqMapNo, long lMasterAxisNo);
// Notifies the library node start loading of Sequence Motion.
DWORD   __stdcall AxmSeqBeginNode(long lSeqMapNo);
// Notifies the library node end loading of Sequence Motion.
DWORD   __stdcall AxmSeqEndNode(long lSeqMapNo);
// Start Sequence Motion Move.
DWORD   __stdcall AxmSeqStart(long lSeqMapNo, DWORD dwStartOption);
// Set each profile node Information of Sequence Motion in Library.
// if used 1axis Sequence Motion, Must be Set *dPosition one Array.
DWORD   __stdcall AxmSeqAddNode(long lSeqMapNo, double* dPosition, double dVelocity, double dAcceleration, double dDeceleration, double dNextVelocity);