Library/AXL(Library)/Dynamic Link/DAXDEV.h

typedef DWORD   PASCAL EXPORT funcAxlGetFirmwareVersion(long lBoardNo, PTCHAR szVersion);
typedef DWORD   PASCAL EXPORT funcAxmSetSendAxisCommand(long lAxisNo, WORD wCommand, WORD* wpSendData, WORD wLength);
extern funcAxlGetFirmwareVersion                *AxlGetFirmwareVersion;
extern funcAxmSetSendAxisCommand                *AxmSetSendAxisCommand;