Library/AXL(Library)/Visual Basic/AXDev.bas


' Verify whether to firmware version designated RTEX board.
Public Declare Function AxlGetFirmwareVersion Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal szVersion As String) As Long
' Sent to firmware designated board.
Public Declare Function AxlSetFirmwareCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef wData As Long, ByRef wCmdData As Long) As Long
'Execute Firmware update to designated board.
Public Declare Function AxlSetFirmwareUpdate Lib "AXL.dll" (ByVal lBoardNo As Long) As Long
' Verify whether currently RTEX status Initialized.
Public Declare Function AxlCheckStatus Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwStatus As Long) As Long
' Execute universal command designated axis of board.
Public Declare Function AxlRtexUniversalCmd Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wCmd As Long, ByVal wOffset As Long, ByRef wData As Long) As Long
' Execute RTEX communication command designated axis.
Public Declare Function AxmRtexSlaveCmd Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwCmdCode As Long, ByVal dwTypeCode As Long, ByVal dwIndexCode As Long, ByVal dwCmdConfigure As Long, ByVal dwValue As Long) As Long
' Verify whether Result of RTEX communication command designated axis.
Public Declare Function AxmRtexGetSlaveCmdResult Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwIndex As Long, ByRef dwValue As Long) As Long
' Check the result of the RTEX communication command executed on the specified axis. PCIE-Rxx04-RTEX only
Public Declare Function AxmRtexGetSlaveCmdResultEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpCommand As Long, ByRef dwpType As Long, ByRef dwpIndex As Long, ByRef dwpValue As Long) As Long
' Verify whether RTEX status information designated axis.
Public Declare Function AxmRtexGetAxisStatus Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwStatus As Long) As Long
' Verify whether RTEX communication return information designated axis.(Actual position, Velocity, Torque)
Public Declare Function AxmRtexGetAxisReturnData Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwReturn1 As Long, ByRef dwReturn2 As Long, ByRef dwReturn3 As Long) As Long
' Verify whether currently status information of RTEX slave axis.(mechanical, Inposition and etc)
Public Declare Function AxmRtexGetAxisSlaveStatus Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwStatus As Long) As Long

' Enter the universal network command of specified MLII slave axis.
Public Declare Function AxmSetAxisCmd Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef tagCommand As Long) As Long
' Verifying result of universal network command of specified MLII slave axis.
Public Declare Function AxmGetAxisCmdResult Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef tagCommand As Long) As Long


' The specified SID Write the result of the network command to the slave module and return it.
Public Declare Function AxdSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef tagSetCommand As Long, ByRef tagGetCommand As Long) As Long
Public Declare Function AxaSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef tagSetCommand As Long, ByRef tagGetCommand As Long) As Long
Public Declare Function AxcSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef tagSetCommand As Long, ByRef tagGetCommand As Long) As Long

' Verify DPRAM data.
Public Declare Function AxlGetDpRamData Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wAddress As Long, ByRef dwpRdData As Long) As Long
' Verify DPRAM data in Word unit.
Public Declare Function AxlBoardReadDpramWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByRef dwpRdData As Long) As Long
' Set DPRAM data in Word unit.
Public Declare Function AxlBoardWriteDpramWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Integer, ByVal dwWrData As Long) As Long

' Transmit instructions of each slave of each board.
Public Declare Function AxlSetSendBoardEachCommand Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwCommand As Long, ByRef dwpSendData As Long, ByVal dwLength As Long) As Long
' Transmit instructions to each board.
Public Declare Function AxlSetSendBoardCommand Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwCommand As Long, ByRef dwpSendData As Long, ByVal dwLength As Long) As Long
' Verify the response of each board.
Public Declare Function AxlGetResponseBoardCommand Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwpReadData As Long) As Long

' Reading firmware version function of slaves in network type master board.
' Declare with array of ucaFirmwareVersion unsigned char type(Size : 4 or more)
Public Declare Function AxmInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef ucaFirmwareVersion As Long) As Long
Public Declare Function AxaInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef ucaFirmwareVersion As Long) As Long
Public Declare Function AxdInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef ucaFirmwareVersion As Long) As Long
Public Declare Function AxcInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal ucaFirmwareVersion As Long) As Long


'======== Only for PCI-R1604-MLII ===========================================================================
' Set the value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
' Default value : Max
' Setting value Range : 0 ~ 4000H
' If it is set to 4000H or higher, the setting is set higher than that, but the operation is applied to the value of 4000H.
Public Declare Function  AxmSetTorqFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwTorqFeedForward As Long) As Long

' It is API that read value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
' Default value : Max
Public Declare Function  AxmGetTorqFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpTorqFeedForward As Long) As Long

' It is API that set the value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
' Default value : 0
' Setting value Range : 0 ~ FFFFH
Public Declare Function  AxmSetVelocityFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwVelocityFeedForward As Long) As Long

' It is API that read value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
Public Declare Function AxmGetVelocityFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpVelocityFeedForward As Long) As Long


' Set Encoder type.
' Default value : 0(TYPE_INCREMENTAL)
' Setting range : 0 ~ 1
' dwEncoderType : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
Public Declare Function AxmSignalSetEncoderType Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwEncoderType As Long) As Long


' Verify Encoder type.
Public Declare Function AxmSignalGetEncoderType Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpEncoderType As Long) As Long



' For updating the slave firmware(only for RTEX-PM).
' Public Declare Function AxmSetSendAxisCommand Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wCommand As Long, ByRef wpSendData As Long, ByVal wLength As Long) As Long

'======== Only for PCI-R1604-RTEX, RTEX-PM==============================================================
' When Input Universal Input 2, 3, Set Jog move velocity
' Set only once execute after all drive setting (Ex, PulseOutMethod, MoveUnitPerPulse etc..)
Public Declare Function AxmMotSetUserMotion Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long


' When Input Universal Input 2, 3, Set Jog move usage
' Setting value :  0(DISABLE), 1(ENABLE)
Public Declare Function AxmMotSetUserMotionUsage Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwUsage As Long) As Long


' Set Load/UnLoad Position to Automatically move use MPGP Input.
Public Declare Function AxmMotSetUserPosMotion Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dLoadPos As Double, ByVal dUnLoadPos As Double, ByVal dwFilter As Long, ByVal dwDelay As Long) As Long


' Set Usage Load/UnLoad Position to Automatically move use MPGP Input
' Setting value :  0(DISABLE), 1(Position function A), 2(Position function B).
Public Declare Function AxmMotSetUserPosMotionUsage Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwUsage As Long) As Long

'========================================================================================================

'======== SIO-CN2CH, Only for absolute position trigger module(B0) ================================================
' The API of writing memory data.
Public Declare Function AxcKeWriteRamDataAddr Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwAddr As Long, ByVal dwData As Long) As Long
' The API of reading memory data.
Public Declare Function AxcKeReadRamDataAddr Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwAddr As Long, ByRef dwpData As Long) As Long
' Memory initialization API.
Public Declare Function AxcKeResetRamDataAll Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwData As Long) As Long
' Trigger timeout setting API.
Public Declare Function AxcTriggerSetTimeout Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwTimeout As Long) As Long
' Trigger timeout checking API.
Public Declare Function AxcTriggerGetTimeout Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpTimeout As Long) As Long
' Trigger Waiting State checking API.
Public Declare Function AxcStatusGetWaitState Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpState As Long) As Long
' Trigger Waiting State setting API.
Public Declare Function AxcStatusSetWaitState Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwState As Long) As Long

' Write command to designated channel.
Public Declare Function AxcKeSetCommandData32 Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCommand As Long, ByVal dwData As Long) As Long
' Write command to designated channel.
Public Declare Function AxcKeSetCommandData16 Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCommand As Long, ByVal wData As Integer) As Long
' Verify register of specified channel.
Public Declare Function AxcKeGetCommandData32 Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCommand As Long, ByRef dwpData As Long) As Long
' Verify register of specified channel.
Public Declare Function AxcKeGetCommandData16 Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCommand As Long, ByRef wpData As Integer) As Long

'========================================================================================================

' ======== Only for PCI-N804/N404, Sequence Motion ===========================================================
' Set Axis Information of sequence Motion (min 1axis)
' lSeqMapNo : Sequence Motion Index Point
' lSeqMapSize : Number of axis
' long* LSeqAxesNo : Number of arrar
Public Declare Function AxmSeqSetAxisMap Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByVal lSeqMapSize As Long, ByRef lSeqAxesNo As Long) As Long
Public Declare Function AxmSeqGetAxisMap Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef lSeqMapSize As Long, ByRef lSeqAxesNo As Long) As Long


' Set Standard(Master)Axis of Sequence Motion.
' By all means Set in AxmSeqSetAxisMap setting axis.
Public Declare Function AxmSeqSetMasterAxisNo Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByVal lMasterAxisNo As Long) As Long


' Notifies the library node start loading of Sequence Motion.
Public Declare Function AxmSeqBeginNode Lib "AXL.dll" (ByVal lSeqMapNo) As Long


' Notifies the library node end loading of Sequence Motion.
Public Declare Function AxmSeqEndNode Lib "AXL.dll" (ByVal lSeqMapNo) As Long


' Start Sequence Motion Move.
Public Declare Function AxmSeqStart Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByVal dwStartOption As Long) As Long


' Set each profile node Information of Sequence Motion in Library.
' if used 1axis Sequence Motion, Must be Set *dPosition one Array.
Public Declare Function AxmSeqAddNode Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef dPosition As Double, ByVal dVelocity As Double, ByVal dAcceleration As Double, ByVal dDeceleration As Double, ByVal dNextVelocity As Double) As Long

